2007-04-19  Ulrich Drepper  <drepper@redhat.com>

	* include/sys/mman.h: Mark madvise hidden.
	* misc/madvise.c: Add libc_hidden_def.

2007-04-06  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_domain_of.c (__nis_domain_of): New function.
	* include/rpcsvc/nislib.h (__nis_domain_of): New prototype.
	* nis/nis_lookup.c (nis_lookup): Use __nis_domain_of.
	* nis/nis_call.c (rec_dirsearch): Likewise.
	(first_shoot): Likewise.  Remove search_parent_first argument.
	(struct nis_server_cache): Rename search_parent_first field
	to search_parent.
	(nis_server_cache_search, nis_server_cache_add): Rename
	search_parent_first argument to search_parent.
	(__nisfind_server): Likewise.  If search_parent, call
	__nis_domain_of.

2007-04-18  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c: Remove commented-out code.

2007-04-17  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4368]
	* stdlib/stdlib.h: Remove obsolete part of comment for realpath.

2007-04-16  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4364]
	* posix/unistd.h (_XOPEN_VERSION): Define appropriately for SUSv3.

2007-04-15  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/locarchive.c (INITIAL_NUM_NAMES,
	INITIAL_SIZE_STRINGS, INITIAL_NUM_LOCREC): Update to accomodate
	current number of locales in SUPPORTED.
	(create_archive): Initialize serial.
	(enlarge_archive): Preserve aliases rather than duplicating
	their locrecs.

2007-04-13  Jakub Jelinek  <jakub@redhat.com>

	* libio/genops.c (_IO_default_finish): Call _IO_lock_fini
	after _IO_un_link, not before it.

	* stdio-common/printf_fp.c (___printf_fp): Fix exponent -4
	special case handling when wcp == wstartp + 1.  Fix a comment typo.
	* stdio-common/tfformat.c (sprint_doubles): Add a new testcase.

2007-03-30  Jakub Jelinek  <jakub@redhat.com>

	* libio/libio.h (__underflow, __uflow, __overflow, __wunderflow,
	__wuflow, __woverflow, _IO_getc, _IO_putc, _IO_peekc_locked, _IO_padn,